--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -23,8 +23,7 @@ http {
     #tcp_nopush     on;
     keepalive_timeout  65;
     gzip  on;
-	#https://renx.cc
-	#http://127.0.0.1:8080
+
 	server {
 		listen 80;
 		charset utf-8;
@@ -37,8 +36,8 @@ http {
 
 		location ^~ /file {
 			expires -1s;
-			#proxy_pass https://renx.cc;
-			alias C:/Users/rxw/Desktop/temp/localhost/file/;
+			proxy_pass https://renx.cc;
+			#alias C:/Users/rxw/Desktop/temp/localhost/file/;
 			if ( $arg_n ~* . ) {
 				add_header Content-Disposition "attachment;filename=$arg_n";
 			}
