--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "querystring": "^0.2.1",
+    "vant": "^3.2.4",
+    "vconsole": "^3.9.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11",
     "vuex": "^3.6.2"
